# notewell

./: Cargo.toml  README.md  config.toml  flake.nix
src/: config.rs  git.rs  heap.rs  index.rs  main.rs  printer.rs  repo.rs
