[package]
name = "noteater"
version = "0.1.0"
authors = ["Carl Hattenfels <carl.hattenfels@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "*"
tempfile = "*"
clap = "*"
serde = "*"
toml = "*"
derive-new = "*"
log = "*"
env_logger = "*"
anyhow = "*"
thiserror = "*"

# Branch using std::error::Error instead of failure::Error
[dependencies.tantivy]
git = "https://github.com/tantivy-search/tantivy"
branch = "Hirevo-move-to-thiserror"