[package]
name = "notewell"
version = "0.1.0"
authors = ["Carl Hattenfels <carl.hattenfels@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "*"
tempfile = "3"
clap = "*"
serde = "*"
serde_json = "*"
toml = "*"
derive-new = "*"
log = "*"
env_logger = "*"
anyhow = "*"
thiserror = "*"
git2 = "*"
tantivy = "0.14.0"